# python-gpsdclient

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
gpsdclient/: __init__.py  cli.py  client.py
tests/: _fake_server.py  example_output.jsonl  example_output_with_toff.jsonl  test_cli.py  test_gpsdclient.py
